--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,46 @@
+# Laravel / PHP
+/vendor/
+/node_modules/
+/bootstrap/cache/*.php
+/storage/*.key
+/storage/app/*
+!/storage/app/.gitignore
+/storage/framework/*
+!/storage/framework/.gitignore
+/storage/framework/cache/*
+!/storage/framework/cache/.gitignore
+/storage/framework/sessions/*
+!/storage/framework/sessions/.gitignore
+/storage/framework/testing/*
+!/storage/framework/testing/.gitignore
+/storage/framework/views/*
+!/storage/framework/views/.gitignore
+/storage/logs/*
+!/storage/logs/.gitignore
+
+# Builds frontend
+/public/build/
+/public/hot
+/public/mix-manifest.json
+
+# Archivos sensibles
+.env
+.env.*
+!.env.example
+/auth.json
+
+# Tests y cache
+.phpunit.result.cache
+.phpunit.cache
+coverage/
+
+# Editores / SO
+/.idea/
+/.vscode/
+/.fleet/
+/.zed/
 *.log
 .DS_Store
-.env
-.env.backup
-.env.production
-.phpactor.json
-.phpunit.result.cache
-/.fleet
-/.idea
-/.nova
-/.phpunit.cache
-/.vscode
-/.zed
-/auth.json
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
-/storage/pail
-/vendor
+Thumbs.db
 Homestead.json
 Homestead.yaml
-Thumbs.db
