--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem": "3.28",
+        "owen-it/laravel-auditing": "^14.0",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
@@ -82,4 +83,3 @@
     "minimum-stability": "stable",
     "prefer-stable": true
 }
-
